# zpotify

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
Assets/: generate-logo.py
codebase_textbook/: index.html
docs/: USER_GUIDE.md
scripts/: readme_mock.py
src/zpotify/: __init__.py  __main__.py  api.py  auth.py  config.py  models.py  radio.py
src/zpotify/player/: __init__.py  audio.py  fft.py  librespot.py
src/zpotify/term/: __init__.py  demo.py  events.py  input.py  screen.py  style.py  widgets.py
src/zpotify/ui/: __init__.py  app.py  theme.py  wordmark.py  workers.py
src/zpotify/ui/views/: __init__.py  base.py  common.py  devices.py  library.py  now_playing.py  playlists.py  queue.py  search.py  settings.py
tests/: test_api.py  test_auth.py  test_librespot_events.py  test_player_audio.py  test_player_fft.py  test_radio.py  test_settings.py  test_staged_start.py  test_term_input.py  test_term_screen.py  test_term_style.py  test_theme.py  test_ui_keys.py  test_up_next.py  test_wordmark.py
