[project]
name = "zpotify"
version = "0.1.0"
description = "Spotify in your terminal — a from-scratch TUI client with real audio visualizers"
readme = "README.md"
authors = [
    { name = "Ziedo", email = "ziedsolomon@hotmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.5.1",
    "sounddevice>=0.5.5",
]

[project.scripts]
zpotify = "zpotify.__main__:main"

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
