[project]
name = "zpotify"
version = "0.2.1"
description = "Spotify in your terminal — a from-scratch TUI client with real audio visualizers"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Ziedo Solomon", email = "ziedsolomon@hotmail.com" }
]
requires-python = ">=3.12"
keywords = ["spotify", "tui", "terminal", "music-player", "visualizer", "librespot"]
classifiers = [
    "Environment :: Console",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Players",
]
dependencies = [
    "numpy>=2.5.1",
    "sounddevice>=0.5.5",
]

[project.urls]
Homepage = "https://github.com/zjsolomon/zpotify"
Repository = "https://github.com/zjsolomon/zpotify"
Documentation = "https://github.com/zjsolomon/zpotify/blob/main/docs/USER_GUIDE.md"
Issues = "https://github.com/zjsolomon/zpotify/issues"

[project.scripts]
zpotify = "zpotify.__main__:main"

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
